# hopai

./: README.md
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
hop_decision/: CMakeLists.txt  package.xml  setup.py
hop_decision/scripts/: hopai_decision.py  hopai_dumb_mind.py  hopai_simple_mind.py  stack_fsm.py
hop_detection/: CMakeLists (copy).txt  CMakeLists.txt  nodelet_plugins.xml  package.xml
hop_detection/cfg/: HopDetection.cfg
hop_detection/config/: camera_params.yaml  detection_params.yaml  fhog_object_detector_params.yaml
hop_detection/include/color_detection/: .color_detection.cpp.swp  color_detection.cpp  color_detection.h
hop_detection/include/common/: error_code.h  log.h  timer.h
hop_detection/include/hop_detection/: .enemy_detection_class.h.swp  armor_detection_base.h  enemy_detection_class.h  enemy_detection_nodelet.h
hop_detection/include/object_detection/: object_detector_class.cpp  object_detector_class.h  util.h
hop_detection/include/object_detection/fhog_object_detector/: fhog_object_detector.cpp  fhog_object_detector.h
hop_detection/include/object_detection/tracking/: .multi_track.cpp.swp  multi_track.cpp  multi_track.h  util.h
hop_detection/launch/: detections.launch  obsatcle_detection.launch  obsatcle_detection_nodelet.launch  ps_detection.launch
hop_detection/rviz/: display_map.rviz
hop_detection/scripts/: .my_test.py.swp  multi_detector.py  my_test.py  tracking.py
hop_detection/scripts/trackers/: __init__.py
hop_detection/src/: .enemy_detection_class.cpp.swp  enemy_detection.cpp  enemy_detection_class.cpp  enemy_detection_nodelet.cpp  enemy_detection_test.cpp
hop_detection/src/color_detection/: color_detection.cpp  color_detection.h
hop_detection/src/object_detection/fhog_object_detector/: .fhog_object_detector.cpp.swp  fhog_object_detector.cpp  fhog_object_detector.h  fhog_object_detector_class.cpp  object_detector_class.cpp
hop_detection/svms/: enemy-back-detector.svm  enemy-front-detector.svm  enemy-left-detector.svm  enemy-right-detector.svm  enemy_detector.svm
hop_firing/: CMakeLists.txt  package.xml  setup.py
hop_firing/scripts/: .auto_firing_0.2.py.swp  auto_firing.py  auto_firing_0.2.py
hop_launch/: CMakeLists.txt  package.xml
hop_launch/launch/: aruco_detect.launch  cam.launch  primesense.launch  rplidar.launch  test_shoot.launch
hop_launch/scripts/: aim_gim.py
hop_msgs/: CMakeLists.txt  package.xml
hop_msgs/msg/: EnemyHOGPos.msg  Ref.msg
hop_tf/: CMakeLists.txt  package.xml
hop_tf/launch/: static_transform.launch
hop_tf/src/: .tf_broadcaster.cpp.swp  tf_broadcaster.cpp
(+5 files in other folders)
